# Django_full

./: .gitignore  asasdasdas.py  pyproject.toml  requirements.txt
.github/workwlows/: cicd.yml
apps/: admin.py  fixtures.py  models.py  serializers.py  urls.py  views.py
root/: settings.py  urls.py
