[tool.poetry]
name = "django-full"
version = "0.1.0"
description = ""
authors = ["abdulloh <abdullohbaxtiyorov2004@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.2"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
